--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,66 +1,9 @@
-@import url(./base/base);
+@import "./utils/mixins";
+@import "./utils/variables";
+@import "./pages/accueil";
+@import "./base/fondations";
+@import ".layout/header";
 
-/*Variables*/ 
-
-$lightgray: #f7f7f7;
-$mediumgray: #f2f2f2;
-$darkengray: #888888;
-$greyblack: #383838;
-$colorprimary: #9356DC;
-$colorsecondary: #ff79da;
-$colortertiary: #99e2d0;
-$white: #fff;
-$pinklight: #f5edff;
-$black: #000000;
-$bars: 7;
-$anim-duree: 900ms;
-$anim-delay: calc($anim-duree / $bars);
-
-/*Mixins*/ 
-
-@mixin roboto {
-    font-family: 'Roboto', sans-serif;
-}
-@mixin shrikhand {
-    font-family: 'Shrikhand', sans-serif;
-}
-@mixin card-shadow {
-    box-shadow: 2px 7px 15px -13px $darkengray;
-}
-@mixin position-shadow {
-    box-shadow: inset 0px 11px 13px -12px $darkengray;
-}
-@mixin shadow-hover {
-    box-shadow: 2px 7px 15px -8px #888888;
-}
-@mixin column {
-    display: flex;
-    flex-direction: column;
-}
-@mixin center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-@mixin wrap {
-    display: flex;
-    flex-wrap: wrap;
-}
-@mixin absolute-icons {
-    position: absolute;
-    z-index: 2;
-    right: 5%;
-}
-@mixin desktop-only {
-    @media screen and (min-width: 760px) {
-        @content;
-    }
-}
-@mixin ellipsis {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;  
-}
 
 
 /*Loader*/ 
@@ -107,290 +50,6 @@ $anim-delay: calc($anim-duree / $bars);
             width: 13rem;
         }
   
-}
-
-
-/*Header*/ 
-
-.logo {
-    display: block;
-    margin: auto;
-    width: 35%;
-    height: auto;
-    padding: 10px 0 15px 0;
-    @include desktop-only {
-        width: 13%;
-        height: auto;
-    }
-}
-
-/*Bannière lieu page accueil*/ 
-
-.position {
-    display: flex;
-    justify-content: center;
-    @include position-shadow;
-    background-color: $mediumgray;
-    height: 85px;
-        label {
-            position: absolute;
-            top: -9999px;
-            left: -9999px;
-        }
-            input {
-                font-size: 1.5rem;
-                border: none;
-                background-color: $mediumgray;
-                margin: 15px 0 32px 105px;
-            }
-}
-
-.position > i {
-    margin: 26px -84px 0 38px;
-    font-size: 1.2rem;
-}
-
-/*Titre et exploration*/ 
-
-.principal_title {
-    @include column;
-    align-items: center;
-    font-size: 1.3rem;
-    background-color: $lightgray;
-    margin: -21px 0 0 0;
-    padding: 12px 25px 74px 25px;
-        p {
-            margin: 20px 0 20px 0;
-            text-align: center;
-        }
-            h2 { 
-                text-align: center;
-            }
-     }
-
-.explore {
-    background: linear-gradient($colorsecondary, $colorprimary);
-    border-radius: 4rem;
-    @include card-shadow;
-    padding-top: 3px;
-    margin-top: 20px;
-    border: none;
-    width: 14em;
-    height: 69px;
-    text-align: center;
-        a {
-            color: $white;
-            text-decoration: none;
-        }
-}
-
-/*Fonctionnement*/ 
-
-.explain {
-    font-weight: bold;
-    font-size: 1.2rem;
-    padding: 60px 15px 100px 27px;
-        h2 {
-            text-align: center;
-            font-size: 2rem;
-            @include desktop-only {
-                text-align: center;
-                font-size: 2rem;
-            }
-        }
-}
-
-.card_functioning {
-    @include column;
-    justify-content: center;
-    margin-top: 30px;
-    gap: 25px;
-    @include desktop-only {
-        flex-direction: row;
-        gap: 80px;
-    }
-}
-
-.number_btn {
-    display: flex;
-    justify-content: center;
-    width: 55px;
-    height: 55px;
-    color: $white;
-    background-color: $colorprimary;
-    border-radius: 3rem;
-    margin: 0 0 0 -13px;
-        p {
-            margin: 15px 0 0 0;
-        }
-}
-
-.btn {
-    @include wrap;
-    align-items: center;
-    background-color: $mediumgray;
-    border-radius: 2rem;
-    @include card-shadow;
-    width: 100%;
-    height: 86px;
-    @include desktop-only {
-            width: 30%;
-        }
-        &:hover {
-            background-color: $pinklight;
-            box-shadow: 2px 7px 15px -8px #888888;
-            i {
-                color: $colorprimary;
-            }
-        }
-            i {
-                color: $darkengray;
-                margin: 0 32px 0 18px;
-                font-size: 16px;
-            }
-}
-
-/*Main*/ /*Présentation des restaurants*/ 
-
-#restaurants {
-    background-color: $mediumgray;
-        h2 {
-            padding: 40px 0 0 30px;
-            @include desktop-only {
-                text-align: center;
-                font-size: 2rem;
-            }
-        }
-}
-
-section {
-    a {
-    text-decoration: none;
-    color: $black;
-    }
-}
-
-.all_cards {
-    @include column;
-    align-items: center;
-    padding-bottom: 75px;
-        @include desktop-only {
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            padding: 15px 100px 100px 100px;
-        }
-}
-
-.card_choice {
-    @include column;
-    border-radius: 1rem;
-    width: 93%;
-    height: 269px;
-    background-color: $white;
-    @include card-shadow;
-    position: relative;
-    margin: 48px 0 0 0;
-    &:hover {
-        @include shadow-hover; 
-    }
-    @include desktop-only {
-        width: 34%;
-        height: 22em;
-    }
-        h3 {
-            margin: 4px 0 0 13px;
-            font-size: 1.5rem;
-            @include desktop-only {
-                margin: 16px 0 0 26px;
-            }
-        }
-            img {
-                width: 100%;
-                height: 195px;
-                object-fit: cover;
-                border-radius: 1rem 1rem 0 0;
-                @include desktop-only {
-                    width: 100%;
-                    height: 16em;
-                }
-            }
-             i {
-                font-size: 37px;
-                color: $darkengray;
-                position: absolute;
-                bottom: 5%;
-                left: 90%;
-                transform: translateY(-50%); 
-                cursor: pointer;
-             }
-                .fas {
-                        -webkit-text-fill-color: transparent;
-                        background: -webkit-linear-gradient($colorprimary, $colorsecondary);
-                        transition: opacity 250ms;
-                        opacity: 0; 
-                        -webkit-background-clip: text;
-                                &:hover {                            
-                                opacity: 1; 
-                                } 
-                        }
-                        .new {
-                        background-color: $colortertiary;
-                        color: rgb(0, 143, 79);
-                        @include absolute-icons;
-                        top: 5%;
-                        padding: 0.5rem;
-                        }
-                        .site {
-                            margin: 10px 0 0 13px;
-                            font-size: 1.2rem;
-                            @include desktop-only {
-                                margin: 10px 0 0 25px;
-                            }
-                        }
-        }
-/*Footer*/ 
-
-.footer {
-    background-color: $greyblack;
-    @include desktop-only {
-       @include column;
-        align-items: center;
-    }
-        a {
-            text-decoration: none;
-        }
-}
-
-.logo-footer {
-    @include shrikhand;
-    font-weight: normal;
-    color: $white;
-    padding: 18px 0 3px 30px;
-    margin: 0;
-}
-
-.links {
-    ul {
-        padding: 0 0 22px 18px;
-        margin: 0;
-    }
-        li {
-            list-style-type: none;
-            margin: 8px;
-            @include desktop-only {
-                display: flex;
-                justify-content: center;
-            }
-            a {
-                text-decoration: none;
-                color: $white;
-            }
-        }
-        i {
-            color: $white;
-            margin: 0 8px 0 0;
-        }            
 }
 
 /*Pages des menus*/ 
