--- a/css/style.css
+++ b/css/style.css
@@ -1,677 +1,17 @@
-@charset "UTF-8";
-@import url(./base/base);
-/*Variables*/
-/*Mixins*/
-/*Loader*/
-.loader {
-  position: fixed;
-  inset: 0;
-  z-index: 1;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  opacity: 0.9;
-  gap: 10px;
-  animation: end 1ms 3s forwards;
-}
-@media screen and (min-width: 760px) {
-  .loader {
-    gap: 15px;
-  }
-}
-.loader__bar {
-  height: 3%;
-  width: 5%;
-  border-radius: 6rem;
-  animation: bar 900ms backwards infinite;
-  animation-direction: alternate;
-  transform-origin: bottom;
-}
-@media screen and (min-width: 760px) {
-  .loader__bar {
-    height: 4%;
-    width: 2%;
-  }
-}
-.loader__bar:nth-child(1) {
-  animation-delay: 128.5714285714ms;
-}
-.loader__bar:nth-child(1), .loader__bar:nth-child(7) {
-  background-color: #ff79da;
-}
-.loader__bar:nth-child(2), .loader__bar:nth-child(5) {
-  background-color: #9356DC;
-}
-.loader__bar:nth-child(3), .loader__bar:nth-child(6) {
-  background-color: #99e2d0;
-}
-.loader__bar:nth-child(2) {
-  animation-delay: 257.1428571429ms;
-}
-.loader__bar:nth-child(1), .loader__bar:nth-child(7) {
-  background-color: #ff79da;
-}
-.loader__bar:nth-child(2), .loader__bar:nth-child(5) {
-  background-color: #9356DC;
-}
-.loader__bar:nth-child(3), .loader__bar:nth-child(6) {
-  background-color: #99e2d0;
-}
-.loader__bar:nth-child(3) {
-  animation-delay: 385.7142857143ms;
-}
-.loader__bar:nth-child(1), .loader__bar:nth-child(7) {
-  background-color: #ff79da;
-}
-.loader__bar:nth-child(2), .loader__bar:nth-child(5) {
-  background-color: #9356DC;
-}
-.loader__bar:nth-child(3), .loader__bar:nth-child(6) {
-  background-color: #99e2d0;
-}
-.loader__bar:nth-child(4) {
-  animation-delay: 514.2857142857ms;
-}
-.loader__bar:nth-child(1), .loader__bar:nth-child(7) {
-  background-color: #ff79da;
-}
-.loader__bar:nth-child(2), .loader__bar:nth-child(5) {
-  background-color: #9356DC;
-}
-.loader__bar:nth-child(3), .loader__bar:nth-child(6) {
-  background-color: #99e2d0;
-}
-.loader__bar:nth-child(5) {
-  animation-delay: 642.8571428571ms;
-}
-.loader__bar:nth-child(1), .loader__bar:nth-child(7) {
-  background-color: #ff79da;
-}
-.loader__bar:nth-child(2), .loader__bar:nth-child(5) {
-  background-color: #9356DC;
-}
-.loader__bar:nth-child(3), .loader__bar:nth-child(6) {
-  background-color: #99e2d0;
-}
-.loader__bar:nth-child(6) {
-  animation-delay: 771.4285714286ms;
-}
-.loader__bar:nth-child(1), .loader__bar:nth-child(7) {
-  background-color: #ff79da;
-}
-.loader__bar:nth-child(2), .loader__bar:nth-child(5) {
-  background-color: #9356DC;
-}
-.loader__bar:nth-child(3), .loader__bar:nth-child(6) {
-  background-color: #99e2d0;
-}
-.loader__bar:nth-child(7) {
-  animation-delay: 900ms;
-}
-.loader__bar:nth-child(1), .loader__bar:nth-child(7) {
-  background-color: #ff79da;
-}
-.loader__bar:nth-child(2), .loader__bar:nth-child(5) {
-  background-color: #9356DC;
-}
-.loader__bar:nth-child(3), .loader__bar:nth-child(6) {
-  background-color: #99e2d0;
-}
-.loader .logo__loader {
-  width: 13rem;
-}
+/* Error: Can't find stylesheet to import.
+ *   ,
+ * 5 | @import ".layout/header";
+ *   |         ^^^^^^^^^^^^^^^^
+ *   '
+ *   sass\style.scss 5:9  root stylesheet */
 
-/*Header*/
-.logo {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
-  margin: auto;
-  width: 35%;
-  height: auto;
-  padding: 10px 0 15px 0;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Can't find stylesheet to import.\a   \2577 \a 5 \2502  @import \".layout/header\";\d\a   \2502          ^^^^^^^^^^^^^^^^\a   \2575 \a   sass\\style.scss 5:9  root stylesheet";
 }
-@media screen and (min-width: 760px) {
-  .logo {
-    width: 13%;
-    height: auto;
-  }
-}
-
-/*Bannière lieu page accueil*/
-.position {
-  display: flex;
-  justify-content: center;
-  box-shadow: inset 0px 11px 13px -12px #888888;
-  background-color: #f2f2f2;
-  height: 85px;
-}
-.position label {
-  position: absolute;
-  top: -9999px;
-  left: -9999px;
-}
-.position input {
-  font-size: 1.5rem;
-  border: none;
-  background-color: #f2f2f2;
-  margin: 15px 0 32px 105px;
-}
-
-.position > i {
-  margin: 26px -84px 0 38px;
-  font-size: 1.2rem;
-}
-
-/*Titre et exploration*/
-.principal_title {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.3rem;
-  background-color: #f7f7f7;
-  margin: -21px 0 0 0;
-  padding: 12px 25px 74px 25px;
-}
-.principal_title p {
-  margin: 20px 0 20px 0;
-  text-align: center;
-}
-.principal_title h2 {
-  text-align: center;
-}
-
-.explore {
-  background: linear-gradient(#ff79da, #9356DC);
-  border-radius: 4rem;
-  box-shadow: 2px 7px 15px -13px #888888;
-  padding-top: 3px;
-  margin-top: 20px;
-  border: none;
-  width: 14em;
-  height: 69px;
-  text-align: center;
-}
-.explore a {
-  color: #fff;
-  text-decoration: none;
-}
-
-/*Fonctionnement*/
-.explain {
-  font-weight: bold;
-  font-size: 1.2rem;
-  padding: 60px 15px 100px 27px;
-}
-.explain h2 {
-  text-align: center;
-  font-size: 2rem;
-}
-@media screen and (min-width: 760px) {
-  .explain h2 {
-    text-align: center;
-    font-size: 2rem;
-  }
-}
-
-.card_functioning {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 30px;
-  gap: 25px;
-}
-@media screen and (min-width: 760px) {
-  .card_functioning {
-    flex-direction: row;
-    gap: 80px;
-  }
-}
-
-.number_btn {
-  display: flex;
-  justify-content: center;
-  width: 55px;
-  height: 55px;
-  color: #fff;
-  background-color: #9356DC;
-  border-radius: 3rem;
-  margin: 0 0 0 -13px;
-}
-.number_btn p {
-  margin: 15px 0 0 0;
-}
-
-.btn {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  background-color: #f2f2f2;
-  border-radius: 2rem;
-  box-shadow: 2px 7px 15px -13px #888888;
-  width: 100%;
-  height: 86px;
-}
-@media screen and (min-width: 760px) {
-  .btn {
-    width: 30%;
-  }
-}
-.btn:hover {
-  background-color: #f5edff;
-  box-shadow: 2px 7px 15px -8px #888888;
-}
-.btn:hover i {
-  color: #9356DC;
-}
-.btn i {
-  color: #888888;
-  margin: 0 32px 0 18px;
-  font-size: 16px;
-}
-
-/*Main*/
-/*Présentation des restaurants*/
-#restaurants {
-  background-color: #f2f2f2;
-}
-#restaurants h2 {
-  padding: 40px 0 0 30px;
-}
-@media screen and (min-width: 760px) {
-  #restaurants h2 {
-    text-align: center;
-    font-size: 2rem;
-  }
-}
-
-section a {
-  text-decoration: none;
-  color: #000000;
-}
-
-.all_cards {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 75px;
-}
-@media screen and (min-width: 760px) {
-  .all_cards {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 15px 100px 100px 100px;
-  }
-}
-
-.card_choice {
-  display: flex;
-  flex-direction: column;
-  border-radius: 1rem;
-  width: 93%;
-  height: 269px;
-  background-color: #fff;
-  box-shadow: 2px 7px 15px -13px #888888;
-  position: relative;
-  margin: 48px 0 0 0;
-}
-.card_choice:hover {
-  box-shadow: 2px 7px 15px -8px #888888;
-}
-@media screen and (min-width: 760px) {
-  .card_choice {
-    width: 34%;
-    height: 22em;
-  }
-}
-.card_choice h3 {
-  margin: 4px 0 0 13px;
-  font-size: 1.5rem;
-}
-@media screen and (min-width: 760px) {
-  .card_choice h3 {
-    margin: 16px 0 0 26px;
-  }
-}
-.card_choice img {
-  width: 100%;
-  height: 195px;
-  object-fit: cover;
-  border-radius: 1rem 1rem 0 0;
-}
-@media screen and (min-width: 760px) {
-  .card_choice img {
-    width: 100%;
-    height: 16em;
-  }
-}
-.card_choice i {
-  font-size: 37px;
-  color: #888888;
-  position: absolute;
-  bottom: 5%;
-  left: 90%;
-  transform: translateY(-50%);
-  cursor: pointer;
-}
-.card_choice .fas {
-  -webkit-text-fill-color: transparent;
-  background: -webkit-linear-gradient(#9356DC, #ff79da);
-  transition: opacity 250ms;
-  opacity: 0;
-  -webkit-background-clip: text;
-}
-.card_choice .fas:hover {
-  opacity: 1;
-}
-.card_choice .new {
-  background-color: #99e2d0;
-  color: #008f4f;
-  position: absolute;
-  z-index: 2;
-  right: 5%;
-  top: 5%;
-  padding: 0.5rem;
-}
-.card_choice .site {
-  margin: 10px 0 0 13px;
-  font-size: 1.2rem;
-}
-@media screen and (min-width: 760px) {
-  .card_choice .site {
-    margin: 10px 0 0 25px;
-  }
-}
-
-/*Footer*/
-.footer {
-  background-color: #383838;
-}
-@media screen and (min-width: 760px) {
-  .footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-.footer a {
-  text-decoration: none;
-}
-
-.logo-footer {
-  font-family: "Shrikhand", sans-serif;
-  font-weight: normal;
-  color: #fff;
-  padding: 18px 0 3px 30px;
-  margin: 0;
-}
-
-.links ul {
-  padding: 0 0 22px 18px;
-  margin: 0;
-}
-.links li {
-  list-style-type: none;
-  margin: 8px;
-}
-@media screen and (min-width: 760px) {
-  .links li {
-    display: flex;
-    justify-content: center;
-  }
-}
-.links li a {
-  text-decoration: none;
-  color: #fff;
-}
-.links i {
-  color: #fff;
-  margin: 0 8px 0 0;
-}
-
-/*Pages des menus*/
-.header-2 {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-.header-2 i {
-  color: #383838;
-  font-size: 2rem;
-}
-
-.logo-menus img {
-  display: flex;
-  align-items: center;
-  width: 60%;
-  margin: auto;
-}
-
-#banniere-menu img {
-  width: 100%;
-  height: 26em;
-  object-fit: cover;
-}
-
-/*Section menu*/
-fieldset {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #f2f2f2;
-  border: none;
-  border-radius: 4rem 4rem 0 0;
-  margin: -65px 0 0 0;
-  position: relative;
-}
-
-.title h1 {
-  font-family: "Shrikhand", sans-serif;
-  font-weight: normal;
-  margin: 30px 61px 5px 0;
-}
-.title i {
-  font-size: 28px;
-  color: #383838;
-  position: absolute;
-  right: 5%;
-  cursor: pointer;
-}
-.title .fas {
-  -webkit-text-fill-color: transparent;
-  background: -webkit-linear-gradient(#9356DC, #ff79da);
-  transition: opacity 250ms;
-  opacity: 0;
-  -webkit-background-clip: text;
-}
-.title .fas:hover {
-  opacity: 1;
-}
-
-.all_cards-menu {
-  display: flex;
-  flex-direction: column;
-}
-@media screen and (min-width: 760px) {
-  .all_cards-menu {
-    flex-direction: row;
-    gap: 45px;
-  }
-}
-
-.entrees, .plats, .desserts {
-  gap: 20px;
-}
-
-.menu-type {
-  text-transform: uppercase;
-  padding: 0.5rem;
-  border-bottom: 3px solid #99e2d0;
-  width: 12%;
-  font-weight: normal;
-}
-
-.cards_menu {
-  overflow: hidden;
-  animation: appear 1s both;
-  transform-origin: top;
-  display: flex;
-  background-color: #fff;
-  border-radius: 1rem;
-  box-shadow: 2px 7px 15px -13px #888888;
-  width: 23em;
-  height: 6em;
-  margin: 0 0 20px 0;
-  cursor: pointer;
-}
-.cards_menu:nth-child(1) {
-  animation-delay: 300ms;
-}
-.cards_menu:nth-child(2) {
-  animation-delay: 600ms;
-}
-.cards_menu:nth-child(3) {
-  animation-delay: 900ms;
-}
-.cards_menu:nth-child(4) {
-  animation-delay: 1200ms;
-}
-.cards_menu:nth-child(5) {
-  animation-delay: 1500ms;
-}
-.cards_menu:nth-child(6) {
-  animation-delay: 1800ms;
-}
-.cards_menu:nth-child(7) {
-  animation-delay: 2100ms;
-}
-.cards_menu:nth-child(8) {
-  animation-delay: 2400ms;
-}
-.cards_menu:nth-child(9) {
-  animation-delay: 2700ms;
-}
-.cards_menu:nth-child(10) {
-  animation-delay: 3000ms;
-}
-@media screen and (min-width: 760px) {
-  .cards_menu {
-    width: 23em;
-    height: 86px;
-  }
-}
-.cards_menu .cards__description {
-  overflow: hidden;
-  padding: 18px 0 0 12px;
-  width: 21em;
-}
-.cards_menu .cards__description h3 {
-  margin: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.cards_menu .cards__description p {
-  margin-top: 10px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-.cards_menu .cards_menu--price {
-  display: flex;
-  align-items: flex-end;
-  font-weight: bold;
-  margin: 0 5px 28px 0;
-}
-@media screen and (min-width: 760px) {
-  .cards_menu .cards_menu--price {
-    margin: 0 5px 15px 0;
-  }
-}
-.cards_menu .cards_menu--check {
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  overflow: hidden;
-  margin-right: -4em;
-  transition: all 0.5s linear;
-  transform-origin: right;
-}
-.cards_menu .cards_menu--check .cards_menu--icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0 1rem 1rem 0;
-  height: 105px;
-  width: 0px;
-  background-color: #99e2d0;
-  transform-origin: right;
-}
-@media screen and (min-width: 760px) {
-  .cards_menu .cards_menu--check .cards_menu--icon {
-    height: 86px;
-  }
-}
-.cards_menu .cards_menu--check i {
-  font-size: 1.5rem;
-  transition: transform 600ms;
-  color: #fff;
-}
-.cards_menu:hover .cards_menu--check {
-  margin-right: 0;
-  transition: margin-right 0.5s linear;
-}
-.cards_menu:hover .cards_menu--price {
-  margin: 0 5px 28px 0;
-}
-@media screen and (min-width: 760px) {
-  .cards_menu:hover .cards_menu--price {
-    margin: 0 5px 15px 0;
-  }
-}
-.cards_menu:hover .cards_menu--icon {
-  width: 4rem;
-}
-.cards_menu:hover i {
-  transform: rotate(360deg);
-}
-
-.command_btn {
-  color: #fff;
-  background: linear-gradient(#ff79da, #9356DC);
-  font-size: 1.2rem;
-  border-radius: 3rem;
-  box-shadow: 2px 7px 15px -13px #888888;
-  padding: 21px 48px 21px 48px;
-  margin: 30px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Keyframes */
-@keyframes appear {
-  0% {
-    transform: scale(0);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-@keyframes bar {
-  0% {
-    transform: scaleY(0.5);
-  }
-  100% {
-    transform: scaleY(1);
-  }
-}
-@keyframes end {
-  to {
-    transform: scale(0);
-  }
-}
-
-/*# sourceMappingURL=style.css.map */
