updt style.scss

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,7 @@
 @import "./pages/accueil";
 @import "./base/fondations";
 @import "./layouts/header";
+@import "./layouts/footer";
 @import "./utils/keyframes";
 
 
