--- a/css/style.css
+++ b/css/style.css
@@ -349,10 +349,10 @@ body {
 /* Keyframes */
 @keyframes appear {
   0% {
-    transform: scale(0);
+    transform: scaleY(0);
   }
   100% {
-    transform: scale(1);
+    transform: scaleY(1);
   }
 }
 @keyframes bar {
@@ -550,8 +550,8 @@ fieldset {
 
 .cards_menu {
   overflow: hidden;
-  animation: appear 1s both;
-  transform-origin: top;
+  animation: appear 700ms both;
+  transform-origin: center;
   display: flex;
   background-color: #fff;
   border-radius: 1rem;
@@ -562,34 +562,34 @@ fieldset {
   cursor: pointer;
 }
 .cards_menu:nth-child(1) {
-  animation-delay: 300ms;
+  animation-delay: 100ms;
 }
 .cards_menu:nth-child(2) {
-  animation-delay: 600ms;
+  animation-delay: 200ms;
 }
 .cards_menu:nth-child(3) {
-  animation-delay: 900ms;
+  animation-delay: 300ms;
 }
 .cards_menu:nth-child(4) {
-  animation-delay: 1200ms;
+  animation-delay: 400ms;
 }
 .cards_menu:nth-child(5) {
-  animation-delay: 1500ms;
+  animation-delay: 500ms;
 }
 .cards_menu:nth-child(6) {
-  animation-delay: 1800ms;
+  animation-delay: 600ms;
 }
 .cards_menu:nth-child(7) {
-  animation-delay: 2100ms;
+  animation-delay: 700ms;
 }
 .cards_menu:nth-child(8) {
-  animation-delay: 2400ms;
+  animation-delay: 800ms;
 }
 .cards_menu:nth-child(9) {
-  animation-delay: 2700ms;
+  animation-delay: 900ms;
 }
 .cards_menu:nth-child(10) {
-  animation-delay: 3000ms;
+  animation-delay: 1000ms;
 }
 @media screen and (min-width: 760px) {
   .cards_menu {
