--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -2,11 +2,11 @@
 
 @keyframes appear {
     0% {
-        transform: scale(0);
+        transform: scaleY(0);
     }
 
     100% {
-        transform: scale(1);
+        transform: scaleY(1);
     }
 }
 
