--- a/sass/style.scss
+++ b/sass/style.scss
@@ -118,7 +118,7 @@ fieldset {
         }
     }
     animation: appear 700ms both;
-    transform-origin: center;
+    transform-origin: bottom;
     display: flex;
     background-color: $white;
     border-radius: 1rem;
