--- a/sass/style.scss
+++ b/sass/style.scss
@@ -130,7 +130,10 @@ fieldset {
     @include desktop-only {
         width: 23em;
         height: 86px;
-    } 
+    }
+    @include mobile-only {
+        width: 19em;
+    }
         .cards__description {
             overflow: hidden;
             padding: 18px 0 0 12px;
