--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -38,6 +38,11 @@
         @content;
     }
 }
+@mixin mobile-only {
+    @media screen and (max-width: 300px) {
+       @content;
+    }
+}
 @mixin ellipsis {
     white-space: nowrap;
     overflow: hidden;
