--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -39,8 +39,8 @@
     }
 }
 @mixin mobile-only {
-    @media screen and (max-width: 300px) {
-       @content;
+    @media screen and (max-width: 420px) {
+      width: 100em;
     }
 }
 @mixin ellipsis {
