--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -147,9 +147,7 @@
     align-items: center;
     background-color: $mediumgray;
     padding: 20px;
-    @include mobile {
-        width: 122%;
-    }
+ 
         i {
             color: $greyblack;
             font-size: 2rem;
@@ -170,5 +168,9 @@
         width: 100%;
         height: 26em;
         object-fit: cover;
+        @include mobile-only {
+        width: 25em;
     }
+    }
+    
 }
